--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>spring-data-rest-hal-browser</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <scope>runtime</scope>
