--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.data.jpa.repositories.enabled=true
+security.basic.enabled=false
 
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jackson.date-format=yyyy-MM-dd'T'HH:mm:ss.SSSZ
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.jackson.default-property-inclusion=non_null
+
 spring.jpa.show-sql=true
